syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "TrajectoryServiceProto";

service TrajectoryService {
  rpc AddTrajectoryData (TrajectoryRequest) returns (TrajectoryResponse) {}
  rpc ReadTrajectoryData (TrajectoryRequest) returns (TrajectoryResponse) {}
  rpc QueryByPrefix(QueryByPrefixRequest) returns (TrajectoryResponse) {}
}

message TrajectoryPoint {
  int32 traj_id = 1;
  int64 timestamp = 2;
  int64 edge_id = 3;
  double distance = 4;
  double lat = 5;
  double lng = 6;
}

message TrajectoryRequest {
  repeated TrajectoryPoint points = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  double min_lat = 4;
  double max_lat = 5;
  double min_lng = 6;
  double max_lng = 7;
}

message TrajectoryResponse {
  repeated TrajectoryPoint points = 1;
  string next_node_id = 2;
}

message QueryByPrefixRequest {
    string prefix = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    double minLat = 4;
    double maxLat = 5;
    double minLng = 6;
    double maxLng = 7;
}